--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 #write db
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.20.201:3306/quhuanqian?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-jdbc.username=qhqeng
-jdbc.password=qhqeng2017
+jdbc.url=jdbc:mysql://120.24.50.11/shiranmo?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.username=root
+jdbc.password=zhanghui
 dbcp.maxIdle=5
 dbcp.maxActive=40
