--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,10 +45,6 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>ztj</servlet-name>
-    <url-pattern>/</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ztj</servlet-name>
     <url-pattern>*.html</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
@@ -57,6 +53,6 @@
   </servlet-mapping>
 
   <welcome-file-list>
-    <welcome-file>/</welcome-file>
+    <welcome-file>/index</welcome-file>
   </welcome-file-list>
 </web-app>
